# Symbiote

./: .gitignore  AGENTS.md  CMakeLists.txt  CMakePresets.json  LICENSE  Makefile  README.md  SUMM
config/: capture.ini  config.example.ini  config.ini.bak
docs/: ARCHITECTURE.md  RESEARCH.md  RESULTS.md  TECHNIQUES.md
internal/poc/: PocDemo.cpp  ResultLogger.cpp  ResultLogger.h
internal/tests/: main.cpp  test_cpuid.cpp  test_kuser.cpp  test_profile.cpp  test_syscall.cpp  test_target.cpp
notes/: CHANGELOG_PHASE9.md
profiles/: analysis.ini  capture.ini  compat.ini  stealth.ini
scripts/: build.bat  setup-dev.ps1
src/engine/: Main.cpp  Main.h  ProcessCloner.cpp  ProcessCloner.h
src/engine/backend/: ICpuBackend.h  UnicornBackend.cpp  UnicornBackend.h  WhpBackend.cpp  WhpBackend.h
src/engine/capture/: CaptureLogger.cpp  CaptureLogger.h
src/engine/debug/: GdbStub.cpp  GdbStub.h  PacketBuffer.h
src/engine/emu/: CryptoEmu.cpp  CryptoEmu.h  DeviceIoEmu.cpp  DeviceIoEmu.h  FileEmu.cpp  FileEmu.h  HwIdEmu.cpp  HwIdEmu.h  MemoryEmu.cpp  MemoryEmu.h  MemoryGuardEmu.cpp  MemoryGuardEmu.h  ObjectEmu.cpp  ObjectEmu.h  PeLoader.cpp  PeLoader.h  ProcessEmu.cpp  ProcessEmu.h  RegistryEmu.cpp  SectionEmu.cpp  SectionEmu.h  StackSpoofer.cpp  StackSpoofer.h  SyscallNames.cpp  SyscallNames.h  ThreadHider.cpp  ThreadHider.h  ThreadManager.cpp  ThreadManager.h  TimingEmu.cpp  TimingEmu.h  VirtualState.cpp
src/engine/kernel/: IKernelBackend.h  KernelBackend.cpp  KernelBackend.h  MinimalKernel.cpp  MinimalKernel.h  SystemProfile.cpp  SystemProfile.h
src/engine/log/: Logger.cpp  Logger.h
src/engine/profile/: CpuProfile.cpp  CpuProfile.h  GpuProfile.cpp  GpuProfile.h  StorageProfile.cpp  StorageProfile.h  TimingProfile.cpp  TimingProfile.h
src/engine/proxy/: ApiSetResolver.cpp  ApiSetResolver.h  DxvkIntegration.cpp  DxvkIntegration.h  EngineExports.cpp  EngineExports.h  Fallthrough.cpp  Fallthrough.h  GpuBridge.cpp  GpuBridge.h  IatPatch.cpp  IatPatch.h  InlineHook.cpp  InlineHook.h  InstructionDecoder.cpp  InstructionDecoder.h  ModuleCloak.cpp  ModuleCloak.h  ProxyBase.cpp  ProxyBase.h  SoGenBridge.cpp  SoGenBridge.h  SyscallBridge.cpp  SyscallBridge.h
src/engine/replay/: ReplayLogger.cpp  ReplayLogger.h
src/engine/sogen/: CryptoEmu.cpp  FileEmu.cpp  MemoryEmu.cpp  ObjectEmu.cpp  PeLoader.cpp  ProcessEmu.cpp  RegistryEmu.cpp  RegistryEmu.h  SectionEmu.cpp  SoGenEmulator.cpp  SoGenEmulator.h  SyscallDispatcher.cpp  SyscallDispatcher.h  ThreadManager.cpp  TimingEmu.cpp  TimingEmu.h  VirtualState.cpp  VirtualState.h
src/engine/util/: HwDetect.h
src/engine/whp/: AcpiTimerHandler.cpp  AcpiTimerHandler.h  AllocTracker.cpp  AllocTracker.h  Canary.cpp  Canary.h  CodePatcher.cpp  CodePatcher.h  ConsistencyVerifier.cpp  ConsistencyVerifier.h  CpuidHandler.cpp  CpuidHandler.h  EptExecHook.cpp  EptExecHook.h  EptHook.cpp  EptHook.h  EptMemoryManager.cpp  EptMemoryManager.h  EptPageProtect.cpp  EptPageProtect.h  EptSplitView.cpp  EptSplitView.h  ExceptionHandler.cpp  ExceptionHandler.h  ExitDispatcher.cpp  ExitDispatcher.h  FileRedirection.cpp  FileRedirection.h  GuestPageTable.cpp  GuestPageTable.h  IndirectSyscall.cpp  IndirectSyscall.h  IpcFilter.cpp  IpcFilter.h  KernelLock.cpp  KernelLock.h  KuserHook.cpp  KuserHook.h  KuserSync.cpp  KuserSync.h  (+36 more)
src/launcher/: ConfigParser.cpp  ConfigParser.h  Main.cpp  ProcessUtils.cpp  ProcessUtils.h  SteamGameDetector.cpp  SteamGameDetector.h  WhpDetection.cpp  WhpDetection.h  app.manifest
src/proxydlls/advapi32_proxy/: dllmain.cpp
src/proxydlls/crypt32_proxy/: dllmain.cpp
src/proxydlls/dnsapi_proxy/: dllmain.cpp
src/proxydlls/iphlpapi_proxy/: dllmain.cpp
src/proxydlls/kernel32_proxy/: dllmain.cpp
src/proxydlls/kernelbase_proxy/: dllmain.cpp
src/proxydlls/ntdll_proxy/: dllmain.cpp
src/proxydlls/secur32_proxy/: dllmain.cpp
src/proxydlls/shared/: ProxyExport.h
src/proxydlls/user32_proxy/: dllmain.cpp
src/proxydlls/wbem_proxy/: dllmain.cpp
src/proxydlls/winhttp_proxy/: dllmain.cpp
src/proxydlls/ws2_32_proxy/: dllmain.cpp
src/proxydlls/wtsapi32_proxy/: dllmain.cpp
src/verify/: Main.cpp
tools/: gen_syscall_tables.ps1  test_sections.ps1
tools/capture/: Main.cpp
tools/handshake_test/: Main.cpp
tools/msr_reader/: Main.cpp
tools/virtualdisk_test/: Main.cpp
